--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -16,6 +16,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -37,6 +38,7 @@ android {
     //}
     buildFeatures {
         dataBinding true
+        viewBinding true
     }
 }
 
@@ -122,5 +124,10 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:$playServicesVersion"
     implementation "com.google.android.gms:play-services-maps:$playServicesVersion"
 
+    // Firebase UI
+    implementation "com.firebaseui:firebase-ui-auth:$firebaseUIVersion"
+
+    implementation "androidx.multidex:multidex:$multidexVersion"
+    implementation "com.jakewharton.timber:timber:$timberVersion"
 
 }
