--- a/starter/build.gradle
+++ b/starter/build.gradle
@@ -63,5 +63,7 @@ ext {
     hamcrestVersion = '1.3'
     androidXTestRulesVersion = '1.2.0-beta01'
     espressoVersion = '3.2.0'
-
+    firebaseUIVersion = '5.0.0'
+    multidexVersion = '2.0.1'
+    timberVersion = '4.7.1'
 }
